--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -80,5 +80,8 @@
         const footer = document.querySelector('footer');
         const toogle = document.querySelector('.toogle');
     </script>
+	 <a href="%s"><button
+            style="background-color: green;text-align: center; color: white; font-size: larger; border-radius: 10px; border: none;
+            height: 40px; font-weight: 600;">⬇️Download</button></a>
 </body>
 	    </html>
